Open, close, & delete for FS tree implemented